feat: apply ink

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --import ./ts-node-register.js src/index.ts"
+    "start": "node --import ./ts-node-register.js src/index.tsx",
+    "build": "tsc",
+    "dev": "nodemon --watch 'src/**/*.tsx' --exec 'ts-node --esm' src/index.tsx"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +15,19 @@
   "dependencies": {
     "@langchain/core": "^0.3.42",
     "@langchain/ollama": "^0.2.0",
+    "@types/react": "^19.0.10",
     "axios": "^1.8.2",
+    "ink": "^5.2.0",
+    "ink-big-text": "^2.0.0",
+    "ink-divider": "^4.1.0",
+    "ink-gradient": "^3.0.0",
+    "ink-select-input": "^6.0.0",
+    "ink-spinner": "^5.0.0",
+    "ink-syntax-highlight": "^2.0.2",
+    "ink-table": "^3.1.0",
+    "ink-text-input": "^6.0.0",
     "langchain": "^0.3.19",
+    "react": "^18.3.1",
     "swagger-parser": "^10.0.3"
   },
   "devDependencies": {
