--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "ink-table": "^3.1.0",
     "ink-text-input": "^6.0.0",
     "langchain": "^0.3.19",
+    "langfuse": "^3.36.0",
+    "openapi-types": "^12.1.3",
     "react": "^18.3.1",
-    "swagger-parser": "^10.0.3"
+    "swagger-parser": "^10.0.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
