--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node --import ./ts-node-register.js src/index.tsx",
+    "prestart": "npm run build",
+    "start": "node dist/index.js",
     "build": "tsc",
     "dev": "nodemon --watch 'src/**/*.tsx' --exec 'ts-node --esm' src/index.tsx"
   },
