--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.42",
     "@langchain/ollama": "^0.2.0",
+    "@types/marked-terminal": "^6.1.1",
     "@types/react": "^19.0.10",
     "axios": "^1.8.2",
     "ink": "^5.2.0",
@@ -29,6 +30,8 @@
     "ink-text-input": "^6.0.0",
     "langchain": "^0.3.19",
     "langfuse": "^3.36.0",
+    "marked": "^11.2.0",
+    "marked-terminal": "^7.3.0",
     "openapi-types": "^12.1.3",
     "react": "^18.3.1",
     "swagger-parser": "^10.0.3",
