--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "marked": "^11.2.0",
     "marked-terminal": "^7.3.0",
     "openapi-types": "^12.1.3",
+    "patch-console": "^2.0.0",
     "react": "^18.3.1",
     "swagger-parser": "^10.0.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "react-devtools-core": "^4.28.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
