--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ink-text-input": "^6.0.0",
     "langchain": "^0.3.19",
     "langfuse": "^3.36.0",
+    "langfuse-langchain": "^3.36.0",
     "marked": "^11.2.0",
     "marked-terminal": "^7.3.0",
     "openapi-types": "^12.1.3",
