--- a/package.json
+++ b/package.json
@@ -14,8 +14,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/credential-provider-node": "^3.758.0",
+    "@aws-sdk/types": "^3.734.0",
+    "@langchain/community": "^0.3.35",
     "@langchain/core": "^0.3.42",
     "@langchain/ollama": "^0.2.0",
+    "@smithy/eventstream-codec": "^2.2.0",
+    "@smithy/protocol-http": "^3.3.0",
+    "@smithy/signature-v4": "^2.3.0",
+    "@smithy/util-utf8": "^2.3.0",
     "@types/marked-terminal": "^6.1.1",
     "@types/react": "^19.0.10",
     "axios": "^1.8.2",
